# lw

./: .gitignore  README.md  findings.md  progress.md  reading_and_reproduction_list.md  roadmap_36_months.md  task_plan.md  weekly_execution_template.md
ecg-dl-baseline/: .gitignore  README.md  RUN_NOTES.md  pyproject.toml  requirements.txt
ecg-dl-baseline/src/ecg_dl_baseline/: __init__.py  data.py  model.py  train.py
ecg-wearable-fm-benchmark/: BEGINNER_GUIDE.md  README.md  RUN_NOTES.md  pyproject.toml  requirements.txt
ecg-wearable-fm-benchmark/src/ecg_wearable_fm/: __init__.py  augment.py  model.py  ptbxl.py  train.py
papers/: non_direct_contact_ecg_signal_classification_download.md  sleepfm_extracted.txt
xmae-reproduction/: .gitignore  README.md  pyproject.toml  run_smoke.cmd  run_train_demo.cmd  smoke_test.py  train_demo.py
xmae-reproduction/upstream/: Dockerfile  README.md  eval_0_simple_example.ipynb  eval_1_pvc.ipynb  pretrain.py  pvc_10s_synth_metadata.csv
xmae-reproduction/upstream/cfg/: xmae.yaml
xmae-reproduction/upstream/preprocessing/: process.py
xmae-reproduction/upstream/utils/: helper_callbacks.py  helper_dataloader.py  helper_general.py  helper_logger.py  helper_models.py  helper_read_h5.py  helper_trainer.py
xmae-reproduction/upstream/utils/model_arch/: xmae.py
