[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-dl-baseline"
version = "0.1.0"
description = "Small PyTorch baseline for ECG heartbeat classification."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "wfdb==4.2.0",
  "pandas<3",
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
