[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-wearable-fm-benchmark"
version = "0.1.0"
description = "PTB-XL wearable robustness benchmark for ECG foundation-model research."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "wfdb==4.2.0",
  "pandas<3",
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
