[project]
name = "xmae-reproduction"
version = "0.1.0"
description = "A uv-managed, CPU-friendly smoke-test wrapper around the official xMAE implementation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0.2",
    "torch==2.8.0",
]

[project.optional-dependencies]
notebook = [
    "h5py>=3.12",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "torchinfo>=1.8",
]

[tool.uv]
package = false
